--- a/databases-and-py.ipynb
+++ b/databases-and-py.ipynb
@@ -2,12 +2,12 @@
     "metadata": {
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python"
         },
         "language_info": {
             "name": "python",
-            "version": "3.8.8",
+            "version": "3.8.10",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -50,14 +50,17 @@
             "cell_type": "code",
             "source": [
                 "# Import sqlite3 and pandas.\n",
+                "import sqlite3 \n",
+                "import pandas as pd \n",
                 ""
             ],
             "metadata": {
                 "azdata_cell_guid": "865655b0-22e9-47f4-a5df-4bfe97dda4a3",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 15
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -74,13 +77,22 @@
             "cell_type": "code",
             "source": [
                 "# Create a new database called exercises.db.\n",
+                "conn = sqlite3.connect('exercises.db')\n",
+                "print('Opened database successfully')\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12"
+                "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12",
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 16
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Opened database successfully\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -98,13 +110,26 @@
             "cell_type": "code",
             "source": [
                 "# Create a new table in your database.\n",
+                "conn.execute (\"\"\"CREATE TABLE 'favorite_books.db'\n",
+                "              ( title TEXT NOT NULL, \n",
+                "               author TEXT NOT NULL,  \n",
+                "               description TEXT NOT NULL );\"\"\")\n",
+                "print('table created successfully')\n",
+                "\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e"
+                "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e",
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 17
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "table created successfully\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -121,13 +146,27 @@
             "cell_type": "code",
             "source": [
                 "# Add your 3 favorite books to your table.\n",
-                ""
+                "conn.execute(\"\"\"INSERT INTO 'favorite_books.db' (title, author, description) \n",
+                "values ('Nursery' , 'Unknown', \"Nursey Rhymes\")\"\"\")\n",
+                "conn.execute(\"\"\"INSERT INTO 'favorite_books.db' (title, author, description) \n",
+                "values ('The coach' , 'Patrick M', \"Autobiography\")\"\"\")\n",
+                "conn.execute(\"\"\"INSERT INTO 'favorite_books.db' (title, author, description) \n",
+                "values ('Bon appetite' , 'Unknown', \"cooking\")\"\"\")\n",
+                "conn.commit\n",
+                "print('Records inserted successfully')"
             ],
             "metadata": {
-                "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5"
+                "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5",
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 18
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Records inserted successfully\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
@@ -145,14 +184,27 @@
             "cell_type": "code",
             "source": [
                 "# Write your SELECT query here.\n",
+                "cursor = conn.execute(\"\"\"SELECT * from 'favorite_books.db'\"\"\")\n",
+                "for row in cursor:\n",
+                "   print(\"Title:\", row[0]);\n",
+                "   print(\"Author:\", row[1]);\n",
+                "   print(\"Description:\", row[2]);\n",
+                "\n",
                 ""
             ],
             "metadata": {
                 "azdata_cell_guid": "c341e7e2-d635-4c26-b744-237c762f7f41",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 19
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Title: Nursery\nAuthor: Unknown\nDescription: Nursey Rhymes\nTitle: The coach\nAuthor: Patrick M\nDescription: Autobiography\nTitle: Bon appetite\nAuthor: Unknown\nDescription: cooking\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -168,14 +220,33 @@
         {
             "cell_type": "code",
             "source": [
-                "# Use Pandas to make a new table in your database.\n",
-                ""
+                "# Use Pandas to make a new table in your database. \n",
+                "df_favorite_movies = pd.DataFrame({\n",
+                "    'id': [1,2,3],\n",
+                "    'title': ['Border', 'Happy Days', 'Karate kid']\n",
+                "})\n",
+                "\n",
+                "df_favorite_movies.to_sql('favorite_movies', conn)\n",
+                "with conn:\n",
+                "    cursor = conn.execute(\"SELECT * FROM favorite_movies \")\n",
+                "    for row in cursor:\n",
+                "        print(\"ID:\", row[1]);\n",
+                "        print(\"Title:\", row[2]);\n",
+                "\n",
+                "conn.close()"
             ],
             "metadata": {
-                "azdata_cell_guid": "b4b6dd20-ccc0-42e7-b1e7-79d8596b3f9c"
+                "azdata_cell_guid": "b4b6dd20-ccc0-42e7-b1e7-79d8596b3f9c",
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 20
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "ID: 1\nTitle: Border\nID: 2\nTitle: Happy Days\nID: 3\nTitle: Karate kid\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 13
         }
     ]
 }
